# nexus

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_STATUS.md  LICENSE  README.md  SECURITY.md  TODO.md  TODO_updated.md  demo.js  deny.toml  flake.nix  gittriage.toml.example  justfile  nexus.py  nexus.toml.example  package-lock.json  package.json  prd.md  requirements.txt  server.py  setup.py
.github/workflows/: analyze.yml  nexus.yml  nightly-health.yml  npm-github-packages.yml  release.yml  reminder.yml  rust-ci.yml  security.yml  stale-branches.yml  weekly-summary.yml
.nexus/: config.yml
cli/: package.json  tsconfig.json
cli/src/: index-simple.ts  index.ts
cli/src/commands/: analyze.ts  config.ts  import.ts  init.ts  remind.ts  scout.ts  status.ts  timeline.ts
cli/src/lib/: code-analyzer.ts  config.ts  conversation-processor.ts  git-hooks.ts  git-manager.ts  github-workflows.ts  prd-parser.ts  report-generator.ts
crates/gittriage/: Cargo.toml
crates/gittriage-adapters/: Cargo.toml
crates/gittriage-adapters/src/: lib.rs
crates/gittriage-adapters/tests/: adapter_absence.rs  external_evidence_non_blocking.rs
crates/gittriage-ai/: Cargo.toml
crates/gittriage-ai/src/: lib.rs
crates/gittriage-api/: Cargo.toml
crates/gittriage-api/src/: lib.rs
crates/gittriage-cli/: Cargo.toml
crates/gittriage-cli/.nexus/: state.db
crates/gittriage-cli/src/: explain.rs  main.rs
crates/gittriage-config/: Cargo.toml
crates/gittriage-config/src/: lib.rs
crates/gittriage-config/tests/: config_precedence.rs
crates/gittriage-core/: Cargo.toml
crates/gittriage-core/src/: lib.rs  model.rs
crates/gittriage-db/: Cargo.toml
crates/gittriage-db/src/: lib.rs
crates/gittriage-db/tests/: clone_remote_links_smoke.rs  load_inventory_run.rs  migration_smoke.rs  persist_plan.rs  replace_inventory.rs  sqlite_hardening.rs
crates/gittriage-git/: Cargo.toml
crates/gittriage-git/src/: lib.rs
crates/gittriage-github/: Cargo.toml
crates/gittriage-github/src/: lib.rs
crates/gittriage-plan/: Cargo.toml
crates/gittriage-plan/src/: lib.rs  scoring.rs
crates/gittriage-plan/tests/: cluster_resolution_fixtures.rs  merge_base_evidence.rs  planner_rules.rs
crates/gittriage-report/: Cargo.toml
crates/gittriage-report/src/: lib.rs
crates/gittriage-report/tests/: snapshot_markdown.rs
crates/gittriage-report/tests/snapshots/: snapshot_markdown__markdown_report.snap
crates/gittriage-scan/: Cargo.toml
crates/gittriage-scan/src/: lib.rs
crates/gittriage-tui/: Cargo.toml
crates/gittriage-tui/src/: lib.rs
crates/gittriage/tests/: e2e_smoke.rs
crates/nexus-adapters/src/: lib.rs
crates/nexus-adapters/tests/: adapter_absence.rs  external_evidence_non_blocking.rs
crates/nexus-api/: Cargo.toml
crates/nexus-cli/: Cargo.toml
crates/nexus-cli/src/: explain.rs  main.rs
crates/nexus-cli/tests/: e2e_smoke.rs
crates/nexus-config/: Cargo.toml
crates/nexus-config/src/: lib.rs
crates/nexus-config/tests/: config_precedence.rs
crates/nexus-core/src/: lib.rs  model.rs  remote_url.rs
crates/nexus-db/: Cargo.toml
crates/nexus-db/src/: lib.rs
crates/nexus-db/tests/: load_inventory_run.rs  persist_plan.rs  replace_inventory.rs
crates/nexus-plan/src/: lib.rs
crates/nexus-plan/tests/: cluster_resolution_fixtures.rs  planner_rules.rs
crates/nexus-report/tests/: snapshot_markdown.rs
docs/: ARCHITECTURE.md  CLI.md  CONFIG.md  DISTRIBUTION.md  EXAMPLES.md  EXTERNAL_TOOLS.md  FAQ.md  LEGACY_V1.md  PLAN_SCHEMA.md  PRODUCT_STRATEGY.md  SCORING.md  SCORING_PROFILES.md
fixtures/golden/: plan-v1.json
nexus/: analysis.py  cli.py  main.py
packaging/: RELEASING.md
packaging/aur/: PKGBUILD
packaging/chocolatey/: gittriage.nuspec  nexus-cli.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
packaging/homebrew/: gittriage.rb  nexus.rb
packaging/npm/: .npmrc  README.md  package.json
packaging/scoop/: gittriage.json  nexus.json
scripts/: tag-legacy-python.sh
web/static/: styles.css
web/templates/: index.html
