[workspace]
members = [
  "crates/nexus-cli",
  "crates/nexus-core",
  "crates/nexus-config",
  "crates/nexus-db",
  "crates/nexus-scan",
  "crates/nexus-git",
  "crates/nexus-github",
  "crates/nexus-plan",
  "crates/nexus-report",
  "crates/nexus-adapters",
    "crates/nexus-api",
    "crates/nexus-tui",
    "crates/nexus-ai",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["Nexus contributors"]
rust-version = "1.82"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4"
directories = "6"
ignore = "0.4"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.39", features = ["bundled", "chrono", "serde_json", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
blake3 = "1"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
uuid = { version = "1", features = ["v4", "serde"] }
which = "8"
walkdir = "2.5"
rayon = "1.10"
insta = "1"
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
crossterm = { version = "0.29", default-features = true }
ratatui = { version = "0.30", default-features = true }
