[workspace]
members = [
  "crates/gittriage",
  "crates/gittriage-core",
  "crates/gittriage-config",
  "crates/gittriage-db",
  "crates/gittriage-scan",
  "crates/gittriage-git",
  "crates/gittriage-github",
  "crates/gittriage-plan",
  "crates/gittriage-report",
  "crates/gittriage-adapters",
  "crates/gittriage-api",
  "crates/gittriage-tui",
  "crates/gittriage-ai",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["GitTriage contributors"]
rust-version = "1.82"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4"
directories = "6"
ignore = "0.4"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.39", features = ["bundled", "chrono", "serde_json", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
blake3 = "1"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
uuid = { version = "1", features = ["v4", "serde"] }
which = "8"
walkdir = "2.5"
rayon = "1.10"
insta = "1"
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
crossterm = { version = "0.29", default-features = true }
ratatui = { version = "0.30", default-features = true }
