[package]
name = "gittriage-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Optional AI-assisted explanations for GitTriage (OpenAI-compatible endpoints)"

[dependencies]
anyhow.workspace = true
gittriage-core = { path = "../gittriage-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
