[package]
name = "gittriage-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
gittriage-config = { path = "../gittriage-config" }
gittriage-db = { path = "../gittriage-db" }
gittriage-plan = { path = "../gittriage-plan" }
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
tower-http.workspace = true
