[package]
name = "gittriage-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
uuid.workspace = true

gittriage-core = { path = "../gittriage-core" }

[dev-dependencies]
chrono.workspace = true
tempfile = "3"
