[package]
name = "gittriage-github"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
which.workspace = true

gittriage-core = { path = "../gittriage-core" }
