[package]
name = "gittriage-report"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde_json.workspace = true

gittriage-core = { path = "../gittriage-core" }

[dev-dependencies]
insta = { workspace = true }
