[package]
name = "gittriage-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Minimal terminal UI for GitTriage cluster inspection (not a dashboard)"

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
gittriage-core = { path = "../gittriage-core" }
ratatui.workspace = true
serde_json.workspace = true

[dev-dependencies]
chrono.workspace = true
gittriage-core = { path = "../gittriage-core" }
