[package]
name = "nexus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
which.workspace = true

nexus-adapters = { path = "../nexus-adapters" }
nexus-api = { path = "../nexus-api" }
nexus-config = { path = "../nexus-config" }
nexus-core = { path = "../nexus-core" }
nexus-db = { path = "../nexus-db" }
nexus-git = { path = "../nexus-git" }
nexus-github = { path = "../nexus-github" }
nexus-plan = { path = "../nexus-plan" }
nexus-report = { path = "../nexus-report" }
nexus-scan = { path = "../nexus-scan" }

[dev-dependencies]
tempfile = "3"
